--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced <app-login-form></app-login-form>.-->
 
-<!-- <app-header></app-header>
-<app-sidebar></app-sidebar>
-<app-footer></app-footer> -->
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
-<app-login-form></app-login-form>
